TestSuite/PascalABCTests/errors/err0013.pas
procedure Test;
begin
end;

function Func : integer;
begin
end;

var a : integer;
begin
Func := 2;
end.